# 2023

./: README.md
challenges/RNGEEE/: rngeee.cue
challenges/RNGEEE/public/: gen.sh  main.py  msg32.txt  msg56.txt
challenges/RNGEEE/setup/: flag.txt
challenges/babyrsa/: babyrsa.cue
challenges/curly/: challenge.cue
challenges/curly/deploy/: curly.c  (+1 more)
challenges/cybercrime-society-club-germany/: cybercrime-society-club-germany.cue
challenges/d3c0d3r/: d3c0d3r.cue
challenges/dash-dash-execute/: dash-dash-execute.cue
challenges/dino-game/: boss.cue  cheat-code.cue  desert-dino-dialogue.cue  dig-it-up.cue  dino-runner.cue  license.cue  maze.cue  merchant.cue  race-to-top.cue  sanity.cue  stegosaurus.cue  unreachable.cue
challenges/dino-game/deploy/src/native/: build.py  pyproject.toml  setup.py  test.py
challenges/dino-game/deploy/src/native/src/: main.cpp
challenges/fused/: build_public.sh  fused.cue
challenges/hit-me/: hit-me.cue
challenges/ikea/: ikea.cue
challenges/live-forensics/: live-forensics.cue
challenges/live-forensics/server/c2_server/: Cargo.toml  Rocket.toml  agents.txt
challenges/live-forensics/server/c2_server/src/: main.rs
challenges/navity/: navity.cue
challenges/ninja/: ninja.cue
challenges/note-pad/: note-pad.cue
challenges/plugin-manager/: plugin-manager.cue
challenges/ransomware/: ransomware.cue
challenges/redacted/: redacted.cue
challenges/revenge-of-61850/: revenge-of-61850.cue
challenges/seebeesee/: seebeesee.cue
challenges/such-popular-much-wow/: such-popular-much-wow.cue
challenges/tis256/: tis256.cue
(+85 files in other folders)
